; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_qcom_nandc.c_read_data_dma.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_qcom_nandc.c_read_data_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qcom_nand_controller = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qcom_nand_controller*, i32, i32*, i32, i32)* @read_data_dma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_data_dma(%struct.qcom_nand_controller* %0, i32 %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.qcom_nand_controller*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.qcom_nand_controller* %0, %struct.qcom_nand_controller** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %12 = load %struct.qcom_nand_controller*, %struct.qcom_nand_controller** %7, align 8
  %13 = getelementptr inbounds %struct.qcom_nand_controller, %struct.qcom_nand_controller* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %5
  %19 = load %struct.qcom_nand_controller*, %struct.qcom_nand_controller** %7, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %11, align 4
  %23 = call i32 @prep_bam_dma_desc_data(%struct.qcom_nand_controller* %19, i32 1, i32* %20, i32 %21, i32 %22)
  store i32 %23, i32* %6, align 4
  br label %30

24:                                               ; preds = %5
  %25 = load %struct.qcom_nand_controller*, %struct.qcom_nand_controller** %7, align 8
  %26 = load i32, i32* %8, align 4
  %27 = load i32*, i32** %9, align 8
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @prep_adm_dma_desc(%struct.qcom_nand_controller* %25, i32 1, i32 %26, i32* %27, i32 %28, i32 0)
  store i32 %29, i32* %6, align 4
  br label %30

30:                                               ; preds = %24, %18
  %31 = load i32, i32* %6, align 4
  ret i32 %31
}

declare dso_local i32 @prep_bam_dma_desc_data(%struct.qcom_nand_controller*, i32, i32*, i32, i32) #1

declare dso_local i32 @prep_adm_dma_desc(%struct.qcom_nand_controller*, i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
